Fix border gap in start menu

--- a/css/taskbar.css
+++ b/css/taskbar.css
@@ -47,12 +47,12 @@
     box-shadow: 12px 12px 24px 4px black;
 }
 #menu-background {
-    border:1px solid #7484CC;
-    width:398px;
-    height:468px;
-    background-color:rgba(94, 108, 175, 0.9);;
-    border-radius:5px;
-    position:absolute;
+    border: 1px solid #7484CC;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(94, 108, 175, 0.9);;
+    border-radius: 5px;
+    position: absolute;
 }
 
 /* Start Menu - Left Side */
